# CoffeezeraBot

./: .env  .gitignore  Cargo.toml  README.md  bot.py
migrations/2017-10-02-225735_create_users/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
teleborg/: Cargo.toml  test_infinite_loop.txt
teleborg/src/: error.rs  lib.rs  updater.rs
teleborg/src/bot/: mod.rs  request_sender.rs  updates_receiver.rs
teleborg/src/objects/: message.rs  update.rs
