[package]
name = "coffeezerabot"
version = "0.1.0"
authors = ["tiberiodarferreira"]

[dependencies]
time = "*"
reqwest = { version = "*"}

threadpool = "*"

diesel = { version = "*", features = ["postgres"] }
diesel_infer_schema = { version = "*", features = ["postgres"] }
dotenv = "*"
erased-serde = "*"
flexi_logger = "*"
log = "*"
[dependencies.teleborg]
path = "../teleborg"
#git = "https://github.com/tiberiusferreira/teleborg.git"
#branch = "fix_getting_updates"