[package]
name = "teleborg"
version = "0.1.32"
authors = ["Wesley A. Gahr <wesleyey0408@gmail.com>"]
documentation = "https://docs.rs/teleborg/0.1.32/teleborg/"
license = "Apache-2.0"
description = "A Telegram bot API."
repository = "https://github.com/voider1/teleborg"
readme = "README.md"
keywords = ["telegram-bot", "rust", "telegram-api"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
time = "0.1.38"
futures-cpupool = "0.1.7"
hyper = "*"
threadpool = "1.7.1"
reqwest = { version = "0.8.1", features = ["unstable"]}
log = "*"
serde = "1.0.21"
serde_json = "1.0.6"
serde_derive = "1.0.21"
